<resources>
    <string name="app_name">Class Calendar</string>
    <string name="newClass">New Class</string>
    <string name="topic">Topic</string>
    <string name="paid">Paid</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="aluno">Student</string>
    <string name="plan">Plan</string>
    <string name="adicionar">Add</string>
    <string name="gerenciarAluno">Management Student</string>
    <string name="gerenciarPlano">Management Plan</string>
    <string name="temaEscuro">Dark Theme</string>
    <string name="informacao">Information</string>
    <string name="nomePlano">Plan Name</string>
    <string name="intervalo">Time Interval</string>
    <string name="quantidade">Amount</string>
    <string name="precoTotal">Total Price</string>
    <string name="nomeAluno">Student Name</string>
    <string name="enderecoAluno">Address</string>
    <string name="idAluno">ID</string>
    <string name="tituloActivityAlunosNoDia">"Classes - "</string>
    <string name="atualizar">Update</string>
    <string name="confirmarAulaAlt">Confirm</string>
    <string name="excluir">Delete</string>
    <string name="descricaoApp">Class Calendar is an application that helps teachers who teach private classes how to manage their classes in terms of the date, time and if the class has already been paid</string>
    <string name="tituloComoFunciona">How it works</string>
    <string name="explicaTelaInicial">"    In the initial screen has a main button that has the functionality to add new classes, however it is necessary to have students and plans registered. To register they must access the menu found in the icon with three dots in the upper right, there is access to student management and plans."</string>
    <string name="explicaTelasGerenciamento">"    In the student and plan management screens, the system works the same way, the fields must be filled for data insertion, a list is incremented below and when you click on an item, the data will appear in the fields and you can edit them, to confirm the edit you need to click the button again which will now work as an embedding. In the top right there is an icon with the image of a garbage, it has the function to delete an item from the list when it is selected."</string>
    <string name="descricaoListaDias">"    Returning to the home screen, you will have a list with items below the button to enter new classes, this list will display the dates with marked classes. Clicking on a date will show the classes relating the student's name to the class time. If you click on one of these classes, the details of the classes will be displayed, where each field can be changed. To upgrade you need to select the update button and to delete you only need to select the trash icon in the upper right."</string>
    <string name="autor">Created by: Rodrigo Dalla Dea</string>
    <string name="versao">This is a initial release</string>
    <string name="itemAdicionado">Item Added</string>
    <string name="itemAtualizado">Item Updated</string>
    <string name="itemExcluido">Item Deleted</string>
    <string name="semMudanca">No Changes</string>
    <string name="preco">Price:</string>
    <string name="aviso">Alert</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deseja_apagar">Do you really want to delete?</string>
    <string name="deseja_atualizar">Do you really wanna update?</string>
    <string name="materiaVazio">The topic is empty</string>
    <string name="dataVazia">The date is empty</string>
    <string name="horaVazia">The time is empty</string>
    <string name="nomeVazio">The name is empty</string>
    <string name="cpfVazio">The id is empty</string>
    <string name="enderecoVazio">The address is empty</string>
</resources>
